# CHIP-8

./: .gitignore  CMakeLists.txt  dummy.ch8  keys_capture.cpp  ltexture.cpp  main.cpp  main.h
sdl_basics/: keys_capture.cpp  keys_capture.h  ltexture.cpp  ltexture.h  main_.cpp  main_.h
src/: chip8.cpp  chip8.h  chip8_gui.cpp  chip8_gui.h  main.cpp  main.h
